# cuda-span

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/dd/: span.hpp
test/: CMakeLists.txt  span_tests.cpp
